@@ -1,30 +1,29 @@
 plugins {
 	id "org.flywaydb.flyway" version "5.2.4"
+	id "org.jetbrains.kotlin.jvm" version "1.3.20"
 }
 
 apply plugin: 'application'
+apply plugin: 'java'
+apply plugin: 'org.jetbrains.kotlin.jvm'
 
-sourceCompatibility = JavaVersion.VERSION_12
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 mainClassName = 'com.mageddo.sqldatapartitioning.Main'
-applicationDefaultJvmArgs = getVmFlags()
-
-compileJava {
-	options.compilerArgs += getVmFlags()
-}
 
 dependencies {
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.1.1.RELEASE'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.1.RELEASE'
 	compile group: 'org.springframework', name: 'spring-aspects', version: '5.0.3.RELEASE'
 	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
+	
+	compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: kotlinVersion
+	compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: kotlinVersion
+	
 	testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.2'
 }
 
-
-static List<String> getVmFlags() {
-	['--enable-preview']
-}
 
 def path = 'src/main/resources/application.properties'
 def p = new Properties()
